# Makefile-Generator-V2

./: .gitignore  Cargo.toml  README.md  TODO  main.cpp
src/: cli.rs  filename_utils.rs  generate.rs  main.rs  parser.rs
